# OS_lab

./: README.md
cp/: CMakeLists.txt  report.docx  user.c
cp/src/: main.c
lab1/: report.docx
lab2/: CMakeLists.txt  Makefile  report.docx
lab2/headers/: strlib.h
lab2/src/: child_1.c  main.c  strlib.c
lab3/: CMakeLists.txt  report.docx
lab3/src/: main.c
lab4/: CMakeLists.txt  report.docx
lab4/src/: child.c  main.c
lab5/: CMakeLists.txt  report.docx
lab5/headers/: realisation.h
lab5/src/: main.c  main_dyn.c  realisation1.c  realisation2.c
lab6/: CMakeLists.txt  report.docx
lab6/headers/: msgQ.h
lab6/src/: client.c  main.c  msgQ.c
other/lab2/: Makefile  child.c  main.c
other/lab3/: Makefile  main.c
other/lab5/: Makefile  main.c  main_dyn.c  realisation.h  realisation1.c  realisation2.c
other/lab6/: Makefile  main.c  node.c  zmq_tools.c  zmq_tools.h
